--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -32,8 +32,66 @@
       />
     </div>
 
-    <div>
-      <button (click)="navigateToLogin()" class="text-white bg-red-500 rounded-lg px-4 py-2">Login</button>
+    <div *ngIf="isLoggedIn" class="flex justify-center align-middle">
+      <div class="flex align-middle">
+        <button (click)="navigateToAddListing()">
+          <img
+            src="../../assets/plus-round.png"
+            alt="plus round"
+            class="w-10 mr-4"
+          />
+        </button>
+      </div>
+      <div
+        (click)="setShowDropdown(!this.showDropdown)"
+        class=" cursor-pointer flex justify-between align-middle border border-gray-300 px-4 py-2 rounded-lg"
+      >
+        <span class="text-lg text-red-600 font-medium mr-2">
+          {{ loggedUsername }}
+        </span>
+        <div class="relative flex align-middle">
+          <button (click)="setShowDropdown(!this.showDropdown)">
+            <img
+              src="https://img.icons8.com/ios-filled/16/null/menu--v1.png"
+              alt="menu-icon"
+            />
+          </button>
+          <div
+            *ngIf="showDropdown"
+            class="flex flex-col absolute top-9  transition-all duration-400 ease-in-out  right-[-14px] justify-between align-bottom self-end w-40 bg-white shadow-md rounded-md px-4 py-4"
+          >
+            <button
+              class="block w-full text-left mb-1 border-b pb-2 border-b-gray-200"
+              (click)="navigateToAddListing()"
+            >
+              Add new Listing
+            </button>
+            <button
+              class="block w-full text-left mb-1"
+              (click)="handleLogout()"
+            >
+              Logout
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div *ngIf="!isLoggedIn && this.router.url === '/login'">
+      <button
+        (click)="navigateToRegister()"
+        class="text-white bg-red-500 rounded-lg px-4 py-2"
+      >
+        Sign Up
+      </button>
+    </div>
+    <div *ngIf="!isLoggedIn && this.router.url !== '/login'">
+      <button
+        (click)="navigateToLogin()"
+        class="text-white bg-red-500 rounded-lg px-4 py-2"
+      >
+        Login
+      </button>
     </div>
   </div>
 </header>
